Fixed wrong width size of footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ div.navbar-collapse .btn {
     background-color: var(--primary-blue) !important;
     color: var(--white)!important;
     margin-top: 100px;
-    padding: 30px 0;
+
 }
 
 .diachi{
@@ -108,5 +108,31 @@ div.navbar-collapse .btn {
     flex-direction: row;
 }
 .copyright{
-    padding: 15px 0 0 0;
+    /*padding: 15px 0 0 0;*/
+}
+
+
+.text-justify-xs {
+    text-align: justify;
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .text-justify-sm {
+        text-align: end;
+    }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    .text-justify-md {
+        text-align: justify;
+    }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .text-justify-lg {
+        text-align: justify;
+    }
 }
